--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@unform/web": "^2.1.6",
     "axios": "^0.26.1",
     "react": "^17.0.1",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-modal": "^3.14.4",
