--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-icons": "^3.0.0",
+    "@types/react-input-mask": "^3.0.2",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.24",
     "json-server": "^0.17.0",
